ifds/src/tests/icfg/naive/snapshots/ifds__tests__icfg__naive__convert__test_ir_table_dot.snap
---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (3) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (6) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (10) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (17) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (19) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (21) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (22) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (25) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (26) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (29) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (30) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (31) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (32) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (33) at (3, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (34) at (2, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (35) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (36) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (37) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (38) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (39) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (40) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (41) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (42) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (43) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (44) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (45) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (46) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (47) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (48) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (49) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (50) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (51) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (52) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (53) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (54) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (55) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (56) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (57) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (58) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (59) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (60) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (61) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (62) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (63) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (64) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (65) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (66) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (67) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (68) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (69) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (70) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (71) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (72) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (73) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (74) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (75) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (76) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (77) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (78) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (79) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (80) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (81) at (3, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (82) at (2, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (83) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (84) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (85) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (86) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (87) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (88) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (89) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (90) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (91) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (92) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (93) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (94) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (95) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (96) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (97) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (98) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (99) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (100) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (101) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (102) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (103) at (1, 7) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Const(2, 3.0)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Block(1)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Table([0, 1, 2, 2])};
		\path[->] (0) edge (4);
		\path[->] (1) edge (53);
		\path[->] (2) edge (5);
		\path[->] (3) edge (6);
		\path[->] (4) edge (8);
		\path[->] (5) edge (57);
		\path[->] (6) edge (10);
		\path[->] (4) edge (9);
		\path[->] (8) edge (12);
		\path[->] (9) edge (13);
		\path[->] (10) edge (62);
		\path[->] (8) edge (14);
		\path[->] (12) edge (16);
		\path[->] (13) edge (17);
		\path[->] (14) edge (18);
		\path[->] (12) edge (19);
		\path[->] (16) edge (20);
		\path[->] (17) edge (21);
		\path[->] (18) edge (70);
		\path[->] (19) edge (22);
		\path[->] (20) edge (24);
		\path[->] (21) edge (25);
		\path[->] (22) edge (74);
		\path[->] (20) edge (26);
		\path[->] (24) edge (28);
		\path[->] (25) edge (29);
		\path[->] (26) edge (30);
		\path[->] (24) edge (31);
		\path[->] (28) edge (32);
		\path[->] (29) edge (33);
		\path[->] (30) edge (34);
		\path[->] (31) edge (83);
		\path[->] (32) edge (36);
		\path[->] (33) edge (37);
		\path[->] (34) edge (38);
		\path[->] (32) edge (39);
		\path[->, bend right] (36) edge (0);
		\path[->, bend right] (37) edge (1);
		\path[->, bend right] (38) edge (2);
		\path[->, bend right] (39) edge (3);
		\path[->, bend right] (36) edge (16);
		\path[->, bend right] (37) edge (17);
		\path[->, bend right] (38) edge (18);
		\path[->, bend right] (39) edge (19);
		\path[->, bend right] (36) edge (28);
		\path[->, bend right] (37) edge (29);
		\path[->, bend right] (38) edge (30);
		\path[->, bend right] (39) edge (31);
		\path[->, bend right] (36) edge (28);
		\path[->, bend right] (37) edge (29);
		\path[->, bend right] (38) edge (30);
		\path[->, bend right] (39) edge (31);


                \end{tikzpicture}
            \end{document}
